DoanhHN - create update category, update customer

--- a/170516/Views/Administrator/ViewProductCategory.cshtml
+++ b/170516/Views/Administrator/ViewProductCategory.cshtml
@@ -9,7 +9,7 @@
             <div class="panel-heading">
                 <div class="panel-title title-3">Danh Sách Danh Mục</div>
                 <div class="panel-options">
-                    <a id="addBtn" href="#" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>                    
+                    <a id="addBtn" href="@Url.Action("AddProductCategory", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>                    
                 </div>
             </div>
             <div class="panel-body">
