--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -67,8 +67,9 @@
             </div>
         </footer>
     </div>
-
+    
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/jqueryval")
     @Scripts.Render("~/bundles/jquery_upload")
     @Scripts.Render("~/bundles/admin_script")
     @Scripts.Render("~/bundles/main_script")
@@ -77,7 +78,13 @@
         var staticUrl = {
             addColor: "@Url.Action("AddColor","Administrator")",
             uploadFile: "@Url.Action("UploadImage", "Home")",
-            addProduct: "@Url.Action("AddProduct","Administrator")"
+            addProduct: "@Url.Action("AddProduct","Administrator")",
+            viewProductCategory: "@Url.Action("ViewProductCategory","Administrator")",
+            addProductCategory: "@Url.Action("AddProductCategory", "Administrator")",
+            updateProductCategory: "@Url.Action("UpdateProductCategory", "Administrator")",
+            deleteProductCategory: "@Url.Action("DeleteProductCategory", "Administrator")",
+
+            updateCustomer: "@Url.Action("UpdateCustomer","Administrator")"
         };
 
         var sampleRegex = {
