--- a/170516/Views/Administrator/ViewProduct.cshtml
+++ b/170516/Views/Administrator/ViewProduct.cshtml
@@ -13,7 +13,7 @@
                 <div class="panel-options">
                     @if (Model.Products.Any())
                     {
-                        <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-primary btn-xs" style="margin-top:0px;"><i class="glyphicon glyphicon-plus"></i> Thêm</a>
+                        <a id="addBtn" href="@Url.Action("AddProduct", "Administrator")" class="btn btn-success btn-xs" style="margin-top:0px;"><i class="fa fa-plus"></i> Tạo sản phẩm</a>
                     }
                 </div>
             </div>
@@ -22,79 +22,87 @@
                 {
                     <div class="row">
                         <div class="col-sm-6">
-                            <div class="dataTables_show_item_div">
-                                <label>
-                                    <span>Hiển thị</span>
-                                    <select id="showNumberSelect" aria-controls="dataTables-example" class="form-control input-sm">
-                                        @if (Model.ItemOnPage == 10)
-                                        {
-                                            <option value="10" selected>10</option>
-                                        }
-                                        else
-                                        {
-                                            <option value="10">10</option>
-                                        }
-                                        @if (Model.ItemOnPage == 25)
-                                        {
-                                            <option value="25" selected>25</option>
-                                        }
-                                        else
-                                        {
-                                            <option value="25">25</option>
-                                        }
-                                        @if (Model.ItemOnPage == 50)
-                                        {
-                                            <option value="50" selected>50</option>
-                                        }
-                                        else
-                                        {
-                                            <option value="50">50</option>
-                                        }
-                                        @if (Model.ItemOnPage == 100)
-                                        {
-                                            <option value="100" selected>100</option>
-                                        }
-                                        else
-                                        {
-                                            <option value="100">100</option>
-                                        }
-                                    </select>
-                                </label>
+                            <input type="hidden" id="dataTables_sort_field_hidden" value="@Model.SortField" />
+                            <input type="hidden" id="dataTables_sort_direction_hidden" value="@Model.IsAsc" />
+                            <div class="dataTables_show_item_div form-inline">
+                                <label><span>Hiển thị</span></label>
+                                <select id="dataTables_showNumberSelect" aria-controls="dataTables-example" class="form-control input-sm">
+                                    @if (Model.ItemOnPage == 10)
+                                    {
+                                        <option value="10" selected>10</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="10">10</option>
+                                    }
+                                    @if (Model.ItemOnPage == 25)
+                                    {
+                                        <option value="25" selected>25</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="25">25</option>
+                                    }
+                                    @if (Model.ItemOnPage == 50)
+                                    {
+                                        <option value="50" selected>50</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="50">50</option>
+                                    }
+                                    @if (Model.ItemOnPage == 100)
+                                    {
+                                        <option value="100" selected>100</option>
+                                    }
+                                    else
+                                    {
+                                        <option value="100">100</option>
+                                    }
+                                </select>                                    
                             </div>
                         </div>
                         <div class="col-sm-6">
-                            <div id="dataTables_show_item_search" class="dataTables_search_div">
-                                <label>Tìm</label>
-                                <input type="search" class="form-control input-sm" value="@Model.SearchText">
+                            <div id="dataTables_show_item_search" class="dataTables_search_div form-inline">
+                                @if(!string.IsNullOrEmpty(Model.SearchText) && Model.SearchText.Equals("NULL"))
+                                {
+                                    <input type="search" class="form-control input-sm" value="">    
+                                } else 
+                                {
+                                    <input type="search" class="form-control input-sm" value="@Model.SearchText">
+                                }
+                                <button type="button" id="dataTables_search" class="btn btn-default btn-sm"><i class="fa fa-search"></i></button>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTables-example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
+                        <div class="col-sm-12 dataTable_grid">
+                            <table class="table table-striped table-bordered table-hover dataTable no-footer dtr-inline" id="dataTable_example" role="grid" aria-describedby="dataTables-example_info" style="width: 100%;">
                                 <thead>
                                     <tr role="row">
-                                        <th class="sorting_asc center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending" style="width: 174px;">Tên</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending" style="width: 211px;">Danh Mục</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending" style="width: 193px;">Số Lượng</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending" style="width: 151px;">Ngày Cập Nhật</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;">Người Cập Nhật</th>
-                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending" style="width: 111px;"></th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">#</th>
+                                        <th class="sorting_asc center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Tên</th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Danh Mục</th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Số Lượng</th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Ngày Cập Nhật</th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1">Người Cập Nhật</th>
+                                        <th class="sorting center" tabindex="0" aria-controls="dataTables-example" rowspan="1" colspan="1"></th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    @foreach (var product in Model.Products)
+                                    @for (var i = 1; i <= Model.Products.Count; i++)
                                     {
                                         <tr class="gradeA odd" role="row">
-                                            <td class="sorting_1">@product.ProductName</td>
-                                            <td>@product.CategoryName</td>
-                                            <td>@product.QuantityInStock</td>
-                                            <td class="center">@product.DateModified.ToString("dd/MM/yyyy hh:mm")</td>
-                                            <td class="center">@product.ModifiedUser</td>
+                                            <td class="sorting">@i</td>
+                                            <td class="sorting_1">@Model.Products[i - 1].ProductName</td>
+                                            <td>@Model.Products[i - 1].CategoryName</td>
+                                            <td>@Model.Products[i - 1].QuantityInStock</td>
+                                            <td class="center">@Model.Products[i - 1].DateModified.ToString("dd/MM/yyyy hh:mm")</td>
+                                            <td class="center">@Model.Products[i - 1].ModifiedUser</td>
                                             <td class="center">
-                                                <a class="action-link" href="@Url.Action("ViewProductDetail","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-search"></i></a>
-                                                <a class="action-link" href="@Url.Action("UpdateProduct","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-pencil"></i></a>
-                                                <a class="action-link" href="@Url.Action("RemoveProduct","Administrator",new {id = product.ProductID})"><i class="glyphicon glyphicon-remove"></i></a>
+                                                <a class="action-link detail-link" title="Chi tiết" href="@Url.Action("ViewProductDetail", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-info-circle"></i></a>
+                                                <a class="action-link update-link" title="Cập nhật" href="@Url.Action("UpdateProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-pencil"></i></a>
+                                                <a class="action-link remove-link" title="Xóa" href="#" data-url="@Url.Action("RemoveProduct", "Administrator", new { id = Model.Products[i - 1].ProductID })"><i class="fa fa-remove"></i></a>
                                             </td>
                                         </tr>
                                     }
@@ -110,23 +118,49 @@
                         <div class="col-sm-6">
                             <div class="dataTables_paginate">
                                 <ul class="pagination">
-                                    <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous"><a href="#">Trước</a></li>
+                                    @if (Model.CurrentPage == 1)
+                                    {
+                                        <li class="paginate_button previous disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                            <a href="#">Trước</a>
+                                        </li>    
+                                    }
+                                    else
+                                    {
+                                        <li class="paginate_button previous" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_previous">
+                                            <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage - 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Trước</a>
+                                        </li>
+                                    }
+                                    
                                     @for (var i = 0; i < 5; i++)
                                     {
-                                        if (i == 0)
-                                        {
-                                            <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
-                                                <a href="@Url.Action("ViewProduct", "Adminstrator", new {page = Model.StartPage+i, itemsPerPage = Model.ItemOnPage, searchText = "NULL", sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage + i).ToString())</a>
-                                            </li>
-                                        }
-                                        else
-                                        {
-                                            <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
-                                                <a href="@Url.Action("ViewProduct", "Adminstrator", new { page = Model.StartPage + i})">@((Model.CurrentPage + i).ToString())</a>
-                                            </li>
+                                        if ((Model.CurrentPage + i) <= Model.TotalPage) { 
+                                            if (i == 0)
+                                            {
+                                                <li class="paginate_button active" aria-controls="dataTables-example" tabindex="0">
+                                                    <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">@((Model.CurrentPage+i).ToString())</a>
+                                                </li>
+                                            }
+                                            else
+                                            {
+                                                <li class="paginate_button" aria-controls="dataTables-example" tabindex="0">
+                                                    <a href="@Url.Action("ViewProduct", "Administrator", new { page = Model.CurrentPage + i, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc })">@((Model.CurrentPage+i).ToString())</a>
+                                                </li>
+                                            }
                                         }
                                     }
-                                    <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next"><a href="#">Sau</a></li>
+
+                                    @if (Model.CurrentPage == Model.TotalPage)
+                                    {
+                                        <li class="paginate_button next disabled" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                            <a href="#">Sau</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li class="paginate_button next" aria-controls="dataTables-example" tabindex="0" id="dataTables-example_next">
+                                            <a href="@Url.Action("ViewProduct", "Administrator", new {page = Model.CurrentPage + 1, itemsPerPage = Model.ItemOnPage, searchText = Model.SearchText, sortField = Model.SortField, isAsc = Model.IsAsc})">Sau</a>
+                                        </li>
+                                    }                                    
                                 </ul>
                             </div>
                         </div>
