--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -77,7 +77,8 @@
         var staticUrl = {
             addColor: "@Url.Action("AddColor","Administrator")",
             uploadFile: "@Url.Action("UploadImage", "Home")",
-            addProduct: "@Url.Action("AddProduct","Administrator")"
+            addProduct: "@Url.Action("AddProduct","Administrator")",
+            viewProduct: "@Url.Action("ViewProduct","Administrator")"
         };
 
         var sampleRegex = {
