--- a/170516/Views/Shared/_AdminLayout.cshtml
+++ b/170516/Views/Shared/_AdminLayout.cshtml
@@ -83,8 +83,7 @@
             addProductCategory: "@Url.Action("AddProductCategory", "Administrator")",
             updateProductCategory: "@Url.Action("UpdateProductCategory", "Administrator")",
             deleteProductCategory: "@Url.Action("DeleteProductCategory", "Administrator")",
-
-            updateCustomer: "@Url.Action("UpdateCustomer","Administrator")"
+            updateCustomer: "@Url.Action("UpdateCustomer","Administrator")",
             addProduct: "@Url.Action("AddProduct","Administrator")",
             viewProduct: "@Url.Action("ViewProduct","Administrator")"
         };
